--- a/addons/music_manager/views/music_manager_genre_views.xml
+++ b/addons/music_manager/views/music_manager_genre_views.xml
@@ -70,7 +70,7 @@
                                         <field name="disk_amount" string="Disk amount" optional="hide"/>
                                         <field name="genre_id" string="Genre"/>
                                         <field name="year" string="Year"/>
-                                        <field name="owner" string="Owner" groups="music_manager.group_music_manager_user_admin"/>
+                                        <field name="owner_ids" string="Owner(s)" groups="music_manager.group_music_manager_user_admin"/>
                                         <field name="create_date" string="Create date" groups="music_manager.group_music_manager_user_admin"/>
                                         <field name="write_date" string="Last update" groups="music_manager.group_music_manager_user_admin"/>
                                     </tree>
@@ -97,6 +97,23 @@
                         </notebook>
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <!-- Searchbar -->
+        <record id="music_manager_genre_view_searchbar" model="ir.ui.view">
+            <field name="name">music_manager.genre.view.searchbar</field>
+            <field name="model">music_manager.genre</field>
+            <field name="arch" type="xml">
+                <search string="Genre searchbar view">
+                    <!-- Custom filters -->
+                    <filter name="my_contributions" string="My contributions" domain="[('owner', '=', uid)]"/>
+
+                    <!-- Custom groups -->
+                    <group string="Group by" expand="1">
+                        <filter name="owner" string="Owner" context="{'group_by': 'owner'}" groups="music_manager.group_music_manager_user_admin"/>
+                    </group>
+                </search>
             </field>
         </record>
     </data>
