--- a/addons/music_manager/views/music_manager_track_views.xml
+++ b/addons/music_manager/views/music_manager_track_views.xml
@@ -6,6 +6,7 @@
             <field name="res_model">music_manager.track</field>
             <field name="view_mode">tree,form</field>
             <field name="groups_id" eval="[(6, 0, [ref('music_manager.group_music_manager_user_general')])]"/>
+            <field name="domain">[('owner', '=', uid)]</field>
         </record>
 
         <record id="music_manager_track_view_action_admin" model="ir.actions.act_window">
